[gd_scene load_steps=8 format=2]

[ext_resource path="res://Scripts/Level/Edge.gd" type="Script" id=1]
[ext_resource path="res://Assets/Fonts/RobotoMono-VariableFont_wght.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Scenes/Helper/ColorTable.tscn" type="PackedScene" id=3]
[ext_resource path="res://Assets/Sound/UI_Selection.ogg" type="AudioStream" id=4]

[sub_resource type="DynamicFont" id=9]
font_data = ExtResource( 2 )

[sub_resource type="Theme" id=10]
default_font = SubResource( 9 )

[sub_resource type="DynamicFont" id=8]
size = 40
outline_size = 3
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 2 )

[node name="Edge" type="Line2D" groups=["Graph"]]
points = PoolVector2Array( 0, 0, 192, 0 )
default_color = Color( 1, 1, 1, 1 )
script = ExtResource( 1 )
padding = 10.0

[node name="TouchBox" type="TouchScreenButton" parent="."]
shape_centered = false

[node name="ContainerLayer" type="Node2D" parent="."]
z_index = 1

[node name="WeightValue" type="Label" parent="ContainerLayer"]
margin_right = 24.0
margin_bottom = 53.0
theme = SubResource( 10 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 8 )
text = "0"
align = 1
valign = 1

[node name="SelectionSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = -5.0

[node name="ColorTable" parent="." instance=ExtResource( 3 )]
selectable_color = Color( 0.85, 0.85, 0.85, 1 )

[connection signal="pressed" from="TouchBox" to="." method="_on_TouchScreenButton_pressed"]
